# metabase-mcp-server

./: .gitignore  Makefile  README.md  cookiecutter.json  database_knowledge_base.md  env.template  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: release.yml  setup-project-structure.yml  test-template.yml  test.yml
mcp_server_metabase/: __main__.py  app.py  config.py
mcp_server_metabase/resources/: base.py
metabase_mcp_server/: app.py
tests/: conftest.py  test_app.py
tests/cassettes/: test_create_bookmark.yaml  test_create_bookmark_already_exists.yaml  test_create_bookmark_card_not_found.yaml  test_create_card.yaml  test_execute_card.yaml  test_execute_query.yaml  test_list_cards.yaml  test_list_collections.yaml  test_list_databases.yaml  test_make_request_success.yaml
{{cookiecutter.repository_slug}}/: Makefile  README.md  requirements-test.txt  setup.cfg
{{cookiecutter.repository_slug}}/tests/: conftest.py  test_app.py
{{cookiecutter.repository_slug}}/{{cookiecutter.top_level_package}}/: app.py
{{cookiecutter.repository_slug}}/{{cookiecutter.top_level_package}}/models/: __init__.py
{{cookiecutter.repository_slug}}/{{cookiecutter.top_level_package}}/resources/: base.py
