[project]
name = "mcp-server-metabase"
version = "0.1.0"
description = "A Model Context Protocol server that enables interaction with Metabase via LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
test = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "pytest-vcr>=1.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings -v --cov-report term-missing --cov=mcp_server_metabase"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "mcp_server_metabase/__main__.py"
]

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
