[project]
name = "mcp-server-metabase"
version = "0.1.0"
description = "A Model Context Protocol server that enables interaction with Metabase via LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.optional-dependencies]
test = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-vcr>=1.0.2",
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings -v --cov-report term-missing --cov=mcp_server_metabase"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
